# STM32_Example_project

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bsp/: CMakeLists.txt
bsp/Drivers/: CMakeLists.txt
cmake/: CCompilerWarnings.cmake  FetchCppUTest.cmake  StandardCProjectSettings.cmake  arm-none-eabi-gcc.cmake  binutils-arm-none-eabi-gcc.cmake  stm32l476.cmake
lib/: CMakeLists.txt
lib/inc/: led_driver.h
lib/src/: led_driver.c
src/: main.c
tests/: CMakeLists.txt  led_driver_test.cpp
